# conductor

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  hello.py  main.py  pyproject.toml
conductor/core/: agent.py  context.py  env.py  globalstate.py  subprocess_manager.py
conductor/tools/: browser.py  exec.py  io.py  subprocess.py
notebooks/: 01_llm_process.ipynb  branching.ipynb  langgraph_code_assistant.ipynb  stream-values.ipynb
scripts/: setup_dev.sh
src/core/: agent.py  logger.py
