[project]
name = "conductor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langroid>=0.16.1",
    "litestar>=2.11.0",
    "openai>=1.45.0",
    "peewee>=3.17.6",
    "pydantic-settings>=2.5.2",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = ["jupyter>=1.1.1", "ruff>=0.2.2"]
