[project]
name = "conductor"
version = "0.1.0"
description = "AI software engineering agent that can actually ship, not just writing to-do apps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langroid>=0.16.1",
    "litestar>=2.11.0",
    "openai>=1.45.0",
    "peewee>=3.17.6",
    "pexpect>=4.9.0",
    "playwright>=1.47.0",
    "pydantic-settings>=2.5.2",
    "pytest-playwright>=0.5.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "typer>=0.9.4",
]

[tool.uv]
dev-dependencies = ["jupyter>=1.1.1", "ruff>=0.2.2"]

[tool.pyright] # for zed
venvPath = "."
venv = ".venv"
